@@ -385,7 +385,7 @@
     if (empty($this->birthday)) {
       if ($this->page["Bio"] == "") $this->openpage ("Bio","person");
       if ( preg_match('|Date of Birth</h5>\s*(.*)<br|iUms',$this->page["Bio"],$match) ) {
-        preg_match('|/date/(\d+)-(\d+)/.*?>\d+\s+(.*?)<|',$match[1],$daymon);
+        preg_match('|/search/name\?birth_monthday=(\d+)-(\d+).*?>\d+\s+(.*?)<|',$match[1],$daymon);
         preg_match('|/search/name\?birth_year=(\d{4})|ims',$match[1],$dyear);
         preg_match('|/search/name\?birth_place=.*?">(.*)<|ims',$match[1],$dloc);
         $this->birthday = array("day"=>$daymon[2],"month"=>$daymon[3],"mon"=>$daymon[1],"year"=>$dyear[1],"place"=>$dloc[1]);
@@ -405,10 +405,10 @@
     if (empty($this->deathday)) {
       if ($this->page["Bio"] == "") $this->openpage ("Bio","person");
       if (preg_match('|Date of Death</h5>(.*)<br|iUms',$this->page["Bio"],$match)) {
-        preg_match('|/date/(\d+)-(\d+)/.*?>\d+\s+(.*?)<|',$match[1],$daymon);
-	preg_match('|/search/name\?death_date=(\d{4})|ims',$match[1],$dyear);
-	preg_match('/(\,\s*([^\(]+))/ims',$match[1],$dloc);
-	preg_match('/\(([^\)]+)\)/ims',$match[1],$dcause);
+        preg_match('|/search/name\?death_monthday=(\d+)-(\d+).*?>\d+\s+(.*?)<|',$match[1],$daymon);
+        preg_match('|/search/name\?death_date=(\d{4})|ims',$match[1],$dyear);
+        preg_match('/(\,\s*([^\(]+))/ims',$match[1],$dloc);
+        preg_match('/\(([^\)]+)\)/ims',$match[1],$dcause);
         $this->deathday = array("day"=>$daymon[2],"month"=>$daymon[3],"mon"=>$daymon[1],"year"=>$dyear[1],"place"=>$dloc[2],"cause"=>$dcause[1]);
       }
     }
