@@ -8,6 +8,7 @@ v2.1.4
 ! imdb::movietype() could no longer distinguish between TV Movie and TV Serie (site changes)
 ! imdb::is_serial() invalidated by site changes
 ! imdb::movieconnection() was broken due to site changes
+! imdb_person::born() and imdb_person::died() suddenly missed day and month (site change; thanks to GeorgeFive for the fix!)
 
 v2.1.3 (15.04.2012)
 -------------------
